k8s-app/nginx-demo/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-canary
  labels:
    app: nginx-demo
spec:
  type: ClusterIP
  selector:
    app: nginx-demo
  ports:
    - port: 80
      targetPort: 80
